--- a/src/_toc.yml
+++ b/src/_toc.yml
@@ -6,14 +6,14 @@ root: intro
 parts:
     - caption: PART_ONE
       maxdepth: 2
-      numbered: True
+      numbered: False
       chapters:
           - file: part_1/chapter_a/index
             sections:
                 - file: part_1/chapter_a/section_1
     - caption: PART_TWO
       maxdepth: 2
-      numbered: True
+      numbered: False
       chapters:
           - file: part_2/chapter_b/index
             sections:
